--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 <!-- メニュー -->
     <nav class="menu">       
-		<h2><a href="#Works" class="arrow_u">Works</a></h2>
+		<h2 class="hidden"><a href="#Works" class="arrow_u" >Works</a></h2>
 		<h2><a href="#Works2" class="arrow_u">Profile</a></h2>
     </nav>
 		
@@ -70,10 +70,10 @@
 			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/537-adh5_jacket.jpg"></li>
 			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/538-TheBeginning_jacket.jpg"></li>
 			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/539-adh4_jacket.png"></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li class="hidden"></li>
+			<li class="hidden"></li>
+			<li class="hidden"></li>
+			<li class="hidden"></li>
 		</ul>
 	</article>
 		
@@ -140,7 +140,7 @@
 							<li><a href="https://www.youtube.com/channel/UCAMAwKWoMOBa0h97nQc_mcQ" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube fa-lg"></i></a></li>
 						</ul>
 						</div>
-					<p>HOUSEとか歌う人。ときどき画像など作る人。<br />レモンサワーと鶏肉で幸せになります！</p>
+					<p>HOUSEとか歌う人。ときどき画像など作る人。</p><p>レモンサワーと鶏肉で幸せになります！</p>
 				</div>
 
 				<div class="contents2">
@@ -169,7 +169,7 @@
 					</div>
 				</div>  
 
-				<div class="contents">
+				<div class="contents3">
 					<div class="r-info">
 					<h3>ご依頼について</h3>
 						<p>仮歌 / ボーカル 等に関するご依頼を承っております。</p>
@@ -183,7 +183,7 @@
 							<dt>▼ お問い合わせ</dt>
 								<dd>
 									twitter(DM) もしくは お問い合わせフォーム にてご連絡くださいませ。
-									毎日確認するようにはしておりますが、2日以上経っても返信がない場合にはお手数おかけいたしますが、twitterにて一言お声がけいただけますと幸いです。<br />
+									毎日確認するようにはしておりますが、2日以上経っても返信がない場合にはお手数おかけいたしますが、twitterにて一言お声がけいただけますと幸いです。<br /><br />
 									※スケジュール等の都合でお断りさせていただくことがございます。ご了承ください。
 								</dd>
 						</dl>
