--- a/index.html
+++ b/index.html
@@ -29,47 +29,47 @@
 <!-- 作品一覧 -->
     <article id="Works" class="contents">
 		<ul class="W-Info">
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/499-bof_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/501-brewers_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/500-lqaz0011_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/502-adh8_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/503-GodOfDisc_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/504-Plain_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/505-White_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/506-Partialrecall_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/507-wakuwakuCompi_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/508-lqaz0009_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/509-Crosspoint_jacket.jpeg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/510-ROUTE23image.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/511-CIRCLE_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/512-MNTnoTaiyou_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/513-lqaz0008_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/514-adh7_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/515-6900000000_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/516-BkmnaShinjitsu_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/517-hanabi_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/518-KoihaMizuiro_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/519-KissOfSun_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/520-Angelfish-agRemix_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/521-PRISM_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/522-allnight_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/523-BabyMaybe_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/524-homuparipi-remix_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/525-homuparipi-originai_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/526-lqaz0005_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/527-NerveImpulse_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/528-adhCOLORS_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/529-adh-Clearly_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/530-lqaz0003_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/531-Angelfish_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/532-ForeverAndEver_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/533-MKDR_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/534-adh6_jacket.png"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/535-HoneyCheeks2_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/536-thenextlittlestep_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/537-adh5_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/538-TheBeginning_jacket.jpg"></li>
-			<li class="JS_Click_Trigger"><img alt="jacket_img" src="css/images/539-adh4_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="0"><img alt="jacket_img" src="css/images/499-bof_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="1"><img alt="jacket_img" src="css/images/501-brewers_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="2"><img alt="jacket_img" src="css/images/500-lqaz0011_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="3"><img alt="jacket_img" src="css/images/502-adh8_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="4"><img alt="jacket_img" src="css/images/503-GodOfDisc_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="5"><img alt="jacket_img" src="css/images/504-Plain_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="6"><img alt="jacket_img" src="css/images/505-White_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="7"><img alt="jacket_img" src="css/images/506-Partialrecall_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="8"><img alt="jacket_img" src="css/images/507-wakuwakuCompi_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="9"><img alt="jacket_img" src="css/images/508-lqaz0009_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="10"><img alt="jacket_img" src="css/images/509-Crosspoint_jacket.jpeg"></li>
+			<li class="JS_Click_Trigger" data-index="11"><img alt="jacket_img" src="css/images/511-CIRCLE_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="12"><img alt="jacket_img" src="css/images/512-MNTnoTaiyou_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="13"><img alt="jacket_img" src="css/images/513-lqaz0008_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="14"><img alt="jacket_img" src="css/images/514-adh7_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="15"><img alt="jacket_img" src="css/images/510-ROUTE23image.png"></li>
+			<li class="JS_Click_Trigger" data-index="16"><img alt="jacket_img" src="css/images/515-6900000000_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="17"><img alt="jacket_img" src="css/images/516-BkmnaShinjitsu_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="18"><img alt="jacket_img" src="css/images/517-hanabi_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="19"><img alt="jacket_img" src="css/images/518-KoihaMizuiro_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="20"><img alt="jacket_img" src="css/images/519-KissOfSun_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="21"><img alt="jacket_img" src="css/images/520-Angelfish-agRemix_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="22"><img alt="jacket_img" src="css/images/521-PRISM_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="23"><img alt="jacket_img" src="css/images/522-allnight_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="24"><img alt="jacket_img" src="css/images/523-BabyMaybe_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="25"><img alt="jacket_img" src="css/images/524-homuparipi-remix_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="26"><img alt="jacket_img" src="css/images/525-homuparipi-originai_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="27"><img alt="jacket_img" src="css/images/526-lqaz0005_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="28"><img alt="jacket_img" src="css/images/527-NerveImpulse_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="29"><img alt="jacket_img" src="css/images/528-adhCOLORS_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="30"><img alt="jacket_img" src="css/images/529-adh-Clearly_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="31"><img alt="jacket_img" src="css/images/530-lqaz0003_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="32"><img alt="jacket_img" src="css/images/531-Angelfish_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="33"><img alt="jacket_img" src="css/images/532-ForeverAndEver_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="34"><img alt="jacket_img" src="css/images/533-MKDR_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="35"><img alt="jacket_img" src="css/images/534-adh6_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="36"><img alt="jacket_img" src="css/images/535-HoneyCheeks2_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="37"><img alt="jacket_img" src="css/images/536-thenextlittlestep_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="38"><img alt="jacket_img" src="css/images/537-adh5_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="39"><img alt="jacket_img" src="css/images/538-TheBeginning_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="40"><img alt="jacket_img" src="css/images/539-adh4_jacket.png"></li>
 			<li class="hidden"></li>
 			<li class="hidden"></li>
 			<li class="hidden"></li>
@@ -88,22 +88,29 @@
 					<div class="youtube">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/Y5ws8WmAX7A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-				<p class="small">※0:00〜0:00</p>
+					<p class="small"></p>
 				</div>
 				<div class="movtext">
 					<div class="movtext-pdg">
-						<p>2020.11.03<br />BOFXVI</p>
+						<p class="date">2020.11.03</p>
+						<p class="eventname">BOFXVI</p>
 					</div>
 						<p class="uline"></p>
-					<div class="movtext-pdg">
-						<p>
-						TEAM : BREWERS<br />
-						<span class="title">afternoon</span><br />ag feat.倉先
+					<div class="movtext-pdg2">
+						<p class="circle">TEAM : BREWERS</p>
+						<p class="subtitle"></p>
+						<p class="title">afternoon</p>
+						<p class="artist">ag feat.倉先</p>
 						</p>
 							<dl>
-								<dt>Music</dt><dd>：ag</dd>
-								<dt>BGA</dt><dd>：fisH</dd>
-								<dt>Vocal</dt><dd>：倉先/kurasaki</dd>
+								<dt class="item01">Music</dt>
+								<dd class="item01_1">：ag</dd>
+								<dt class="item02">BGA</dt>
+								<dd class="item02_1">：fisH</dd>
+								<dt class="item03">Vocal</dt>
+								<dd class="item03_1">：倉先/kurasaki</dd>
+								<dt class="item04">あ</dt>
+								<dd class="item04_1">：あ</dd>
 							</dl>
 						<div>
 							<a class="button" href="http://manbow.nothing.sh/event/event.cgi?action=More_def&num=420&event=133" target="_blank" rel="noopener noreferrer">特設サイト</a>
