--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 		
 		<div class="share">
 			<ul class="social-icon">
-					<li><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="ここにサイトURL" data-show-count="false"></a>
+					<li><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://ixjusttt.github.io/ksakyworks_sample" data-show-count="false"></a>
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
 			</ul>
 		</div>
