--- a/index.html
+++ b/index.html
@@ -21,12 +21,83 @@
 	</header> 
 	
 <!-- メニュー -->
-    <nav class="menu">       
+    <nav class="menu">
+		<h2 class="hidden"><a href="#Discography" class="arrow_u" >Discography</a></h2>
 		<h2 class="hidden"><a href="#Works" class="arrow_u" >Works</a></h2>
-		<h2><a href="#Works2" class="arrow_u">Profile</a></h2>
+		<h2><a href="#Profile" class="arrow_u">Profile</a></h2>
     </nav>
 		
 <!-- 作品一覧 -->
+		<article id="Discography">
+			<div class="Disco-wrapper">
+				<div class="Disco-Inner">
+						<div class="mov">
+							<div class="youtube">
+								<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/692761480&color=%2364544c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+							</div>
+							<p class="small"></p>
+						</div>
+						<div class="movtext">
+							<div class="movtext-pdg">
+								<p class="date">2019.10.27</p>
+								<p class="eventname">秋M3</p>
+							</div>
+								<p class="uline"></p>
+							<div class="movtext-pdg2">
+								<p class="artist">ag feat.倉先</p>
+								<p class="circle">新譜「CIRCLE」</p>
+								<p class="subtitle"></p>
+									<dl>
+										<dt class="item01">Music</dt>
+										<dd class="item01_1">：ag</dd>
+										<dt class="item02">BGA</dt>
+										<dd class="item02_1">：fisH</dd>
+										<dt class="item03">Vocal</dt>
+										<dd class="item03_1">：倉先/kurasaki</dd>
+										<dt class="item04"></dt>
+										<dd class="item04_1"></dd>
+									</dl>
+							<div class="button-mq">
+								<a class="button" href="https://circle.agr1920.com/" target="_blank" rel="noopener noreferrer">特設サイト</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="title-Inner">
+					<div class="title-Inner-Track"><p>Track</p></div>
+					<div class="wrapper">
+						<div class="title-Inner-L">
+							<p class="title"> 1.	Follow me</p>
+								<p class="title-note">(from Diverse System - AD:HOUSE 4)</p>
+							<p class="title"> 2.	Starlight</p>
+								<p class="title-note">(from Diverse System - AD:HOUSE 5)</p>
+							<p class="title"> 3.	Orange</p>
+								<p class="title-note">(new song)</p>
+							<p class="title"> 4.	Whenever will be</p>
+								<p class="title-note">(from double caret - ホムパリピ！)</p>
+							<p class="title"> 5.	Sigh</p>
+								<p class="title-note">(from STRLabel - PRISM)</p>
+							<p class="title"> 6.	Forever And Ever</p>
+								<p class="title-note"></p>
+						</div>
+						<div class="title-Inner-R">
+							<p class="title"> 7.	all night(extend)</p>
+								<p class="title-note">(new song)</p>
+							<p class="title"> 8.	I can be myself</p>
+								<p class="title-note">(from Swingrooves - the beginning)</p>
+							<p class="title"> 9.	One Day</p>
+								<p class="title-note">(from Lick Dom Records & Neutrinique - Honey Cheeks 2 -Purple Dress-)</p>
+							<p class="title">10.	Shine</p>
+								<p class="title-note">(from Diverse System - AD:HOUSE 6)</p>
+							<p class="title">11.	Count on you</p>
+								<p class="title-note">(from Diverse System - Clearly - AD:HOUSE BEST)</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article>
+
     <article id="Works" class="contents">
 		<ul class="W-Info">
 			<li class="JS_Click_Trigger" data-index="0"><img alt="jacket_img" src="css/images/499-bof_jacket.png"></li>
@@ -40,7 +111,7 @@
 			<li class="JS_Click_Trigger" data-index="8"><img alt="jacket_img" src="css/images/507-wakuwakuCompi_jacket.jpg"></li>
 			<li class="JS_Click_Trigger" data-index="9"><img alt="jacket_img" src="css/images/508-lqaz0009_jacket.png"></li>
 			<li class="JS_Click_Trigger" data-index="10"><img alt="jacket_img" src="css/images/509-Crosspoint_jacket.jpeg"></li>
-			<li class="JS_Click_Trigger" data-index="11"><img alt="jacket_img" src="css/images/511-CIRCLE_jacket.jpg"></li>
+
 			<li class="JS_Click_Trigger" data-index="12"><img alt="jacket_img" src="css/images/512-MNTnoTaiyou_jacket.png"></li>
 			<li class="JS_Click_Trigger" data-index="13"><img alt="jacket_img" src="css/images/513-lqaz0008_jacket.jpg"></li>
 			<li class="JS_Click_Trigger" data-index="14"><img alt="jacket_img" src="css/images/514-adh7_jacket.png"></li>
@@ -84,13 +155,13 @@
 		<div class="OverLayer-Mask"></div>
 		<div class="OverLayer-Inner">
 				<div class="wrapper">
-				<div class="mov">
-					<div class="youtube">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Y5ws8WmAX7A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="mov">
+						<div class="youtube">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Y5ws8WmAX7A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+						<p class="small"></p>
 					</div>
-					<p class="small"></p>
-				</div>
-				<div class="movtext">
+					<div class="movtext">
 					<div class="movtext-pdg">
 						<p class="date">2020.11.03</p>
 						<p class="eventname">BOFXVI</p>
@@ -128,99 +199,100 @@
     </nav>
 		
 <!-- プロフィール -->	
-	<section id="Works2" class="Profile">
-		<div class="All-Info"> 
-			<div class="img">
-				<img alt="prof_img" src="css/images/profile-icon.jpg">
-			</div> 
-			<div class="P-Info">
-				<div class="contents">
-					<div class="title">
-						<h3>倉先/kurasaki</h3>
-						<ul class="social-icon">
-							<li><a href="https://twitter.com/k_saky" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-lg"></i></a></li>
-							<li><a href="https://soundcloud.com/k_saky" target="_blank" rel="noopener noreferrer"><i class="fab fa-soundcloud fa-lg"></i></a></li>
-							<li><a href="https://www.youtube.com/channel/UCAMAwKWoMOBa0h97nQc_mcQ" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube fa-lg"></i></a></li>
-						</ul>
-						</div>
-					<p>HOUSEとか歌う人。ときどき画像など作る人。</p><p>レモンサワーと鶏肉で幸せになります！</p>
-				</div>
-
-				<div class="contents2">
-					<div class="v-info">
-						<h3>Vocal</h3>
-						<p><span class="border">録音環境</span></p>
-						<dl>
-							<dt>オーディオI/F</dt><dd>：Roland/Rubix24</dd>
-							<dt>マイク</dt><dd>：AMATERAS 8097[S]</dd>
-							<dt>ヘッドフォン</dt><dd>：SONY/MDR-CD900S</dd>
-							<dt>録音ソフト</dt><dd>：Cubase LE AI Elements 9</dd>
-							<dt>プラグイン</dt><dd>：Waves Tune Vocal</dd>
-							<dt></dt><dd>：Melodyne 4 essential</dd>
-						</dl>
+	<section id="Profile" class="Profile">
+		<div class="Profile-wrapper">
+			<div class="All-Info"> 
+				<div class="img">
+					<img alt="prof_img" src="css/images/profile-icon.jpg">
+				</div> 
+				<div class="P-Info">
+					<div class="contents">
+						<div class="title">
+							<h3>倉先/kurasaki</h3>
+							<ul class="social-icon">
+								<li><a href="https://twitter.com/k_saky" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-lg"></i></a></li>
+								<li><a href="https://soundcloud.com/k_saky" target="_blank" rel="noopener noreferrer"><i class="fab fa-soundcloud fa-lg"></i></a></li>
+								<li><a href="https://www.youtube.com/channel/UCAMAwKWoMOBa0h97nQc_mcQ" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube fa-lg"></i></a></li>
+							</ul>
+							</div>
+						<p>HOUSEとか歌う人。ときどき画像など作る人。</p><p>レモンサワーと鶏肉で幸せになります！</p>
 					</div>
-					<div class="d-info">
-						<h3>Design</h3>
-						<p><span class="border">作業環境</span></p>
-						<dl>
-							<dt>コンピュータ</dt><dd>：iMac</dd>
-							<dt>使用ソフト</dt><dd>：illustrator</dd>
-							<dt></dt><dd>：Photoshop</dd>
-							<dt></dt><dd>：CLIP STUDIO</dd>
-							<dt>タブレット</dt><dd>：準備中</dd>
-						</dl>
-					</div>
-				</div>  
 
-				<div class="contents3">
-					<div class="r-info">
-					<h3>ご依頼について</h3>
-						<p>仮歌 / ボーカル 等に関するご依頼を承っております。</p>
-						<p>素敵な楽曲に少しでもお力添え出来ますよう、精一杯努力させていただきたいと思います。商業・同人問わず、随時お受けしております。お気軽にご連絡/ご相談ください！</p>
-						<dl>
-							<dt>▼ 納期</dt>
-								<dd>
-									基本、1曲につき<span class="check">1〜2週間程度</span>頂いております。
-									お急ぎの場合は、別途ご相談ください。
-								</dd>
-							<dt>▼ お問い合わせ</dt>
-								<dd>
-									twitter(DM) もしくは お問い合わせフォーム にてご連絡くださいませ。
-									毎日確認するようにはしておりますが、2日以上経っても返信がない場合にはお手数おかけいたしますが、twitterにて一言お声がけいただけますと幸いです。<br /><br />
-									※スケジュール等の都合でお断りさせていただくことがございます。ご了承ください。
-								</dd>
-						</dl>
-					</div>
-				</div>
+					<div class="contents2">
+						<div class="v-info">
+							<h3>Vocal</h3>
+							<p><span class="border">録音環境</span></p>
+							<dl>
+								<dt>オーディオI/F</dt><dd>：Roland/Rubix24</dd>
+								<dt>マイク</dt><dd>：AMATERAS 8097[S]</dd>
+								<dt>ヘッドフォン</dt><dd>：SONY/MDR-CD900S</dd>
+								<dt>録音ソフト</dt><dd>：Cubase LE AI Elements 9</dd>
+								<dt>プラグイン</dt><dd>：Waves Tune Vocal</dd>
+								<dt></dt><dd>：Melodyne 4 essential</dd>
+							</dl>
+						</div>
+						<div class="d-info">
+							<h3>Design</h3>
+							<p><span class="border">作業環境</span></p>
+							<dl>
+								<dt>コンピュータ</dt><dd>：iMac</dd>
+								<dt>使用ソフト</dt><dd>：illustrator</dd>
+								<dt></dt><dd>：Photoshop</dd>
+								<dt></dt><dd>：CLIP STUDIO</dd>
+								<dt>タブレット</dt><dd>：準備中</dd>
+							</dl>
+						</div>
+					</div>  
 
-				<div id="contact">
-					<h3>お問い合わせ</h3>
-					<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSebPTqDhooA_48o90wzpmimYHHW9SgFCIIZJWTWE1hSwLdr1g/formResponse">
-						<div>
-							<label for="form-name">Name</label>
-							<p><input id="form-name" type="text" name="entry.1097346607" placeholder="" required=""></p>
+					<div class="contents3">
+						<div class="r-info">
+						<h3>ご依頼について</h3>
+							<p>仮歌 / ボーカル 等に関するご依頼を承っております。</p>
+							<p>素敵な楽曲に少しでもお力添え出来ますよう、精一杯努力させていただきたいと思います。商業・同人問わず、随時お受けしております。お気軽にご連絡/ご相談ください！</p>
+							<dl>
+								<dt>▼ 納期</dt>
+									<dd>
+										基本、1曲につき<span class="check">1〜2週間程度</span>頂いております。
+										お急ぎの場合は、別途ご相談ください。
+									</dd>
+								<dt>▼ お問い合わせ</dt>
+									<dd>
+										twitter(DM) もしくは お問い合わせフォーム にてご連絡くださいませ。
+										毎日確認するようにはしておりますが、2日以上経っても返信がない場合にはお手数おかけいたしますが、twitterにて一言お声がけいただけますと幸いです。<br /><br />
+										※スケジュール等の都合でお断りさせていただくことがございます。ご了承ください。
+									</dd>
+							</dl>
 						</div>
-						<div>
-							<label for="form-mail">Email</label>
-							<p><input id="form-mail" type="email" name="entry.171847403" placeholder="" required=""></p>
-						</div>
-						<div>
-							<label for="form-detail">Message</label>
-							<p><textarea id="form-detail" name="entry.1283175638" placeolder="" required=""></textarea></p>
-							<p><button type="submit" name="button" value="送信する">送信</button></p>
-						</div>
-					</form>
+					</div>
+
+					<div id="contact">
+						<h3>お問い合わせ</h3>
+						<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSebPTqDhooA_48o90wzpmimYHHW9SgFCIIZJWTWE1hSwLdr1g/formResponse">
+							<div>
+								<label for="form-name">Name</label>
+								<p><input id="form-name" type="text" name="entry.1097346607" placeholder="" required=""></p>
+							</div>
+							<div>
+								<label for="form-mail">Email</label>
+								<p><input id="form-mail" type="email" name="entry.171847403" placeholder="" required=""></p>
+							</div>
+							<div>
+								<label for="form-detail">Message</label>
+								<p><textarea id="form-detail" name="entry.1283175638" placeolder="" required=""></textarea></p>
+								<p><button type="submit" name="button" value="送信する">送信</button></p>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
+			<div class="share">
+				<ul class="social-icon">
+						<li><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://ixjusttt.github.io/ksakyworks_sample" data-show-count="false"></a>
+							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+				</ul>
+			</div>
+			<div id="copyright"><small>Copyright &copy; 2020 倉先/kurasaki.</small></div>
 		</div>
-		
-		<div class="share">
-			<ul class="social-icon">
-					<li><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://ixjusttt.github.io/ksakyworks_sample" data-show-count="false"></a>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-			</ul>
-		</div>
-		<div id="copyright"><small>Copyright &copy; 2020 倉先/kurasaki.</small></div>
 	</section>
 </div>
 
