--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 								<p class="circle">新譜「CIRCLE」</p>
 								<p class="subtitle"></p>
 									<dl>
-										<dt class="item01">Music</dt>
+										<dt class="item01">Music </dt>
 										<dd class="item01_1">：ag</dd>
-										<dt class="item02">BGA</dt>
-										<dd class="item02_1">：fisH</dd>
+										<dt class="item02">LYRICS</dt>
+										<dd class="item02_1">：ag</dd>
 										<dt class="item03">Vocal</dt>
-										<dd class="item03_1">：倉先/kurasaki</dd>
-										<dt class="item04"></dt>
-										<dd class="item04_1"></dd>
+										<dd class="item03_1">：倉先 /kurasaki</dd>
+										<dt class="item04">Design</dt>
+										<dd class="item04_1">：倉先 /kurasaki</dd>
 									</dl>
 							<div class="button-mq">
 								<a class="button" href="https://circle.agr1920.com/" target="_blank" rel="noopener noreferrer">特設サイト</a>
@@ -111,36 +111,35 @@
 			<li class="JS_Click_Trigger" data-index="8"><img alt="jacket_img" src="css/images/507-wakuwakuCompi_jacket.jpg"></li>
 			<li class="JS_Click_Trigger" data-index="9"><img alt="jacket_img" src="css/images/508-lqaz0009_jacket.png"></li>
 			<li class="JS_Click_Trigger" data-index="10"><img alt="jacket_img" src="css/images/509-Crosspoint_jacket.jpeg"></li>
-
-			<li class="JS_Click_Trigger" data-index="12"><img alt="jacket_img" src="css/images/512-MNTnoTaiyou_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="13"><img alt="jacket_img" src="css/images/513-lqaz0008_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="14"><img alt="jacket_img" src="css/images/514-adh7_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="15"><img alt="jacket_img" src="css/images/510-ROUTE23image.png"></li>
-			<li class="JS_Click_Trigger" data-index="16"><img alt="jacket_img" src="css/images/515-6900000000_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="17"><img alt="jacket_img" src="css/images/516-BkmnaShinjitsu_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="18"><img alt="jacket_img" src="css/images/517-hanabi_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="19"><img alt="jacket_img" src="css/images/518-KoihaMizuiro_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="20"><img alt="jacket_img" src="css/images/519-KissOfSun_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="21"><img alt="jacket_img" src="css/images/520-Angelfish-agRemix_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="22"><img alt="jacket_img" src="css/images/521-PRISM_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="23"><img alt="jacket_img" src="css/images/522-allnight_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="24"><img alt="jacket_img" src="css/images/523-BabyMaybe_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="25"><img alt="jacket_img" src="css/images/524-homuparipi-remix_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="26"><img alt="jacket_img" src="css/images/525-homuparipi-originai_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="27"><img alt="jacket_img" src="css/images/526-lqaz0005_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="28"><img alt="jacket_img" src="css/images/527-NerveImpulse_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="29"><img alt="jacket_img" src="css/images/528-adhCOLORS_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="30"><img alt="jacket_img" src="css/images/529-adh-Clearly_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="31"><img alt="jacket_img" src="css/images/530-lqaz0003_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="32"><img alt="jacket_img" src="css/images/531-Angelfish_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="33"><img alt="jacket_img" src="css/images/532-ForeverAndEver_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="34"><img alt="jacket_img" src="css/images/533-MKDR_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="35"><img alt="jacket_img" src="css/images/534-adh6_jacket.png"></li>
-			<li class="JS_Click_Trigger" data-index="36"><img alt="jacket_img" src="css/images/535-HoneyCheeks2_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="37"><img alt="jacket_img" src="css/images/536-thenextlittlestep_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="38"><img alt="jacket_img" src="css/images/537-adh5_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="39"><img alt="jacket_img" src="css/images/538-TheBeginning_jacket.jpg"></li>
-			<li class="JS_Click_Trigger" data-index="40"><img alt="jacket_img" src="css/images/539-adh4_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="11"><img alt="jacket_img" src="css/images/512-MNTnoTaiyou_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="12"><img alt="jacket_img" src="css/images/513-lqaz0008_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="13"><img alt="jacket_img" src="css/images/514-adh7_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="14"><img alt="jacket_img" src="css/images/510-ROUTE23image.png"></li>
+			<li class="JS_Click_Trigger" data-index="15"><img alt="jacket_img" src="css/images/515-6900000000_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="16"><img alt="jacket_img" src="css/images/516-BkmnaShinjitsu_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="17"><img alt="jacket_img" src="css/images/517-hanabi_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="18"><img alt="jacket_img" src="css/images/521-PRISM_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="19"><img alt="jacket_img" src="css/images/522-allnight_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="20"><img alt="jacket_img" src="css/images/518-KoihaMizuiro_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="21"><img alt="jacket_img" src="css/images/523-BabyMaybe_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="22"><img alt="jacket_img" src="css/images/524-homuparipi-remix_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="23"><img alt="jacket_img" src="css/images/525-homuparipi-originai_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="24"><img alt="jacket_img" src="css/images/519-KissOfSun_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="25"><img alt="jacket_img" src="css/images/526-lqaz0005_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="26"><img alt="jacket_img" src="css/images/527-NerveImpulse_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="27"><img alt="jacket_img" src="css/images/528-adhCOLORS_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="28"><img alt="jacket_img" src="css/images/529-adh-Clearly_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="29"><img alt="jacket_img" src="css/images/530-lqaz0003_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="30"><img alt="jacket_img" src="css/images/531-Angelfish_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="31"><img alt="jacket_img" src="css/images/520-Angelfish-agRemix_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="32"><img alt="jacket_img" src="css/images/532-ForeverAndEver_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="33"><img alt="jacket_img" src="css/images/533-MKDR_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="34"><img alt="jacket_img" src="css/images/534-adh6_jacket.png"></li>
+			<li class="JS_Click_Trigger" data-index="35"><img alt="jacket_img" src="css/images/535-HoneyCheeks2_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="36"><img alt="jacket_img" src="css/images/536-thenextlittlestep_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="37"><img alt="jacket_img" src="css/images/537-adh5_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="38"><img alt="jacket_img" src="css/images/538-TheBeginning_jacket.jpg"></li>
+			<li class="JS_Click_Trigger" data-index="39"><img alt="jacket_img" src="css/images/539-adh4_jacket.png"></li>
 			<li class="hidden"></li>
 			<li class="hidden"></li>
 			<li class="hidden"></li>
@@ -182,8 +181,10 @@
 								<dd class="item03_1">：倉先/kurasaki</dd>
 								<dt class="item04">あ</dt>
 								<dd class="item04_1">：あ</dd>
+								<dt class="item05">い</dt>
+								<dd class="item05_1">：い</dd>
 							</dl>
-						<div>
+						<div class="button-mq">
 							<a class="button" href="http://manbow.nothing.sh/event/event.cgi?action=More_def&num=420&event=133" target="_blank" rel="noopener noreferrer">特設サイト</a>
 						</div>
 					</div>
