--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Vocal Works | 倉先/kurasaki</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/all.css" rel="stylesheet"> 
+	<script src="https://kit.fontawesome.com/0d709744b1.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/main.js"></script>
@@ -22,9 +22,9 @@
 	
 <!-- メニュー -->
     <nav class="menu">
-		<h2 class="hidden"><a href="#Discography" class="arrow_u" >Discography</a></h2>
-		<h2 class="hidden"><a href="#Works" class="arrow_u" >Works</a></h2>
-		<h2><a href="#Profile" class="arrow_u">Profile</a></h2>
+		<h2 class="hidden"><div id="dsc"><a href="#Discography" class="arrow_u" >Discography</a></div></h2>
+		<h2 class="hidden"><div id="wks"><a href="#Works" class="arrow_u" >Works</a></div></h2>
+		<h2><div id="prf"><a href="#Profile" class="arrow_u">Profile</a></div></h2>
     </nav>
 		
 <!-- 作品一覧 -->
@@ -296,6 +296,8 @@
 		</div>
 	</section>
 </div>
+
+<div id="page_top"><a href="#mainWrapper"><i class="fas fa-chevron-up fa-2x"></i></a></div>
 
 </body>
 </html>
