--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 </div>
                 <div id="cpr">
                   <div class="share_sns mb-3">
-                    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="ここにサイトURLを記入" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://ixjusttt.github.io/ksakyworks_sample/" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                   </div>
                   <div class="fs-2 fw-l mb-10">
                     <small>Copyright &copy; 2020 倉先/kurasaki.</small>
