--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
           <div id="MainMenu" class="fs-4 mb-10 mx-auto">
             <ul class="flex">
-              <li id="dsc"><a href="#Discography"><h3><div class="arrow-d mr-3"></div>Discography</h3></a></li>
+              <li id="dsc" class="hidden2"><a href="#Discography"><h3><div class="arrow-d mr-3"></div>Discography</h3></a></li>
               <li id="wks"><a href="#Works"><h3><div class="arrow-d mr-3"></div>Works</h3></a></li>
               <li id="abt"><a href="#About"><h3><div class="arrow-d mr-3"></div>About</h3></a></li>
             </ul>
